# Rotor_CFD

./: .gitignore  CMakeLists.txt  README.md  configure.sh
src/: cfd.cpp  cfd.h  gen_mesh.cpp  gen_mesh.hpp  vk_engine.cpp  vk_engine.h  vk_helper.cpp  vk_helper.h  vk_initializers.cpp  vk_initializers.h  vk_types.cpp  vk_types.h
src/shaders/: advect.comp  gaussSiedel.comp  model.frag  model.vert  rayTrace.frag  triangle.frag  triangle.vert  writeTexture.comp
